--- a/pom.xml
+++ b/pom.xml
@@ -68,14 +68,15 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			 <plugin>
 			   <groupId>org.apache.maven.plugins</groupId>
-			   <artifactId>maven-resources-plugin</artifactId>
-			   <version>3.1.0</version>
-			 </plugin>
+			   <artifactId>maven-compiler-plugin</artifactId>
+			   <version>3.10.1</version>
+			   <configuration>
+			      <source>1.8</source>
+			      <target>1.8</target>
+			      <verbose>true</verbose>
+			   </configuration>
+			</plugin>
 		</plugins>
 	</build>
 
