--- a/pom.xml
+++ b/pom.xml
@@ -68,14 +68,8 @@
 	<build>
 		<plugins>
 			<plugin>
-			   <groupId>org.apache.maven.plugins</groupId>
-			   <artifactId>maven-compiler-plugin</artifactId>
-			   <version>3.10.1</version>
-			   <configuration>
-			      <source>1.8</source>
-			      <target>1.8</target>
-			      <verbose>true</verbose>
-			   </configuration>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
